noinst_LTLIBRARIES = libSDL_gfx.la

libSDL_gfx_la_SOURCES = \
  SDL_framerate.c \
  SDL_framerate.h \
  SDL_gfxBlitFunc.c \
  SDL_gfxBlitFunc.h \
  SDL_gfxPrimitives.c \
  SDL_gfxPrimitives.h \
  SDL_gfxPrimitives_font.h \
  SDL_imageFilter.c \
  SDL_imageFilter.h \
  SDL_rotozoom.c \
  SDL_rotozoom.h
